welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:49: error: not found: value fairecar
faireCar();avance(4);fairecar()
                     ^