welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {

def faireCar() = {
avance()
setCouleurBrosse(Color.RED)
baisseBrosse()
leveBrosse()
avance()
setCouleurBrosse(Color.BLUE)
baisseBrosse()
leveBrosse()
avance()
gauche()
avance()
setCouleurBrosse(Color.BLUE)
baisseBrosse()
leveBrosse()
avance()
setCouleurBrosse(Color.GREEN)
baisseBrosse()
leveBrosse()
avance()
gauche()
avance()
setCouleurBrosse(Color.GREEN)
baisseBrosse()
leveBrosse()
avance()
setCouleurBrosse(Color.YELLOW)
baisseBrosse()
leveBrosse()
avance()
gauche()
avance()
setCouleurBrosse(Color.YELLOW)
baisseBrosse()
leveBrosse()
avance()
setCouleurBrosse(Color.RED)
baisseBrosse()
leveBrosse()
avance()
gauche()
}

faireCar();avance(4);faireCar()
recule(4);gauche();avance(4);droite();
faireCar();avance(4);fairecar()


}
